fix overflow scroll in failure

--- a/src/hypofuzz/frontend/src/styles.scss
+++ b/src/hypofuzz/frontend/src/styles.scss
@@ -326,6 +326,10 @@ select {
 
 .content {
     flex: 1;
+    // prevent flex children from growing beyond parent width. Not having
+    // this property caused problems with overflow-x: scroll; not working,
+    // because the element we wanted to scroll would simply grow indefinitely.
+    min-width: 0;
     padding: 20px 30px;
 
     @media (max-width: 768px) {
